fix: remove connect button on mobile

--- a/src/components/global/Navbar/styles.module.scss
+++ b/src/components/global/Navbar/styles.module.scss
@@ -130,6 +130,10 @@
         user-select: none;
       }
 
+      @media screen and (max-width: 500px) {
+          display: none;
+        }
+
       .address {
         font-family: 'UpheavalPro';
         font-size: 24px;
